# PA3

./: .HTTP_Server.cpp.swp  .scriptA.sh.swp  Dockerfile  FuncA.cpp  FuncA.h  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  deb.deb  funca  funca.1  main.cpp  scriptA.sh  scriptB.sh
.deps/: FuncA.Po  HTTP_Server.Po  main.Po
.github/workflows/: c-cpp.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.1  traces.2
deb/DEBIAN/: control
tests/: Funcatest1  Makefile  Makefile.am  Makefile.in  main.cpp
tests/.deps/: main.Po
